tests/baselines/reference/assignLambdaToNominalSubtypeOfFunction.errors.txt
assignLambdaToNominalSubtypeOfFunction.ts(7,4): error TS2345: Argument of type '(a: any, b: any) => boolean' is not assignable to parameter of type 'IResultCallback'.
assignLambdaToNominalSubtypeOfFunction.ts(8,4): error TS2345: Argument of type '(a: any, b: any) => boolean' is not assignable to parameter of type 'IResultCallback'.


==== assignLambdaToNominalSubtypeOfFunction.ts (2 errors) ====
    interface IResultCallback extends Function {
        x: number;
    }
    
    function fn(cb: IResultCallback) { }
    
    fn((a, b) => true);
       ~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(a: any, b: any) => boolean' is not assignable to parameter of type 'IResultCallback'.
    fn(function (a, b) { return true; })
       ~~~~~~~~
!!! error TS2345: Argument of type '(a: any, b: any) => boolean' is not assignable to parameter of type 'IResultCallback'.
    